--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
 		}
 		#container {
 	    width: 100%;
-	    padding: 2em;
+	    padding: 1em;
 	    max-width: 400px;
 	    margin: 0 auto;
+		box-sizing:border-box;
 		}
 		#container > a {
 			/* Big button */
