--- a/index.html
+++ b/index.html
@@ -147,13 +147,14 @@
 			<header>
 				<div class="round-image shadow"></div>
 				<h1>Lost Way <em>· jewellery</em></h1>
-				<p>I hand make rings and pendants in the UK.
-				<br />
-				Bentwood rings + Wire-wrapped pendants.
+				<p>
+					I hand make rings and pendants in the UK.
+					Bentwood rings + Wire-wrapped pendants.
 				<!--
 					<br />
-					Buy online now from my Etsy shop.</p>
+					Buy online now from my Etsy shop.
 				-->
+				</p>
 			</header>
 
 			<!--
