--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 	    max-width: 400px;
 	    margin: 0 auto;
 		box-sizing:border-box;
+			height: 100vh;
 		}
 		#container > a {
 			/* Big button */
@@ -170,32 +171,6 @@
 			<!--
 				<a href="https://lostwayjewellery.com/" class="hvr-grow">Website <em>find out more</em></a>
 			-->
-				
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
 			
 			<footer>
 				<p>Based on the Isle of Wight, UK</p>
